--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@ __pycache__/
 .Python
 env/
 venv/
+.env
 
 # Build
 dist/
@@ -19,6 +20,3 @@ data/
 # Sistema
 .DS_Store
 Thumbs.db
-
-#config
-sistema_config.json
