--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 PyQt5==5.15.9
-PyPDF2==3.0.1
 openai==1.3.0
-chromadb==0.4.18
-python-dotenv==1.0.0
-pydub==0.25.1
+SQLAlchemy==2.0.23
+psycopg2-binary==2.9.7
+numpy==1.24.0
+scikit-learn==1.3.0
+tiktoken==0.5.1
+PyPDF2==3.0.1
