--- a/requirements.txt
+++ b/requirements.txt
@@ -6,5 +6,4 @@ numpy==1.24.0
 scikit-learn==1.3.0
 tiktoken==0.5.1
 PyPDF2==3.0.1
-pydub==2.0.3
-SpeechRecognition==3.8.1
+pydub==0.25.1  # ✅ Versión compatible con Python 3.10
