--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
 PyQt5==5.15.9
-openai==1.3.0
+openai==2.6.0
 SQLAlchemy==2.0.23
 psycopg2-binary==2.9.7
 numpy==1.24.0
 scikit-learn==1.3.0
 tiktoken==0.5.1
 PyPDF2==3.0.1
-pydub==0.25.1  # ✅ Versión compatible con Python 3.10
+pydub==0.25.1
